# musa-650-spring2026

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
assignments/: EUROSAT.md  MIDTERM.md
week01/: README.md
week02/: README.md
week03/: README.md  non_ML_approaches_remote_sensing.ipynb  zarr_wf_utils.py
week04/: README.md  solutions.ipynb  solutions_new.ipynb
week05/: README.md  solutions.ipynb
week06/: README.md  ag_native.geojson  forest_more.geojson  overture_polys.geojson  solutions_new.py  training_polys.geojson  training_polys_final.parquet  urban_more.geojson  vienna_samples.parquet  water_more.geojson
week07/: README.md  solutions.ipynb
week08/: README.md  week08_lab_solutions.ipynb  week08_lab_student.ipynb  week08_presentation.slides.html
week13/: README.md
